--- a/install
+++ b/install
@@ -2,3 +2,4 @@
 sudo apt install software-properties-common
 sudo apt-add-repository --yes --update ppa:ansible/ansible
 sudo apt install -y ansible
+sudo ansible-galaxy collection install community.general
