--- a/install
+++ b/install
@@ -3,3 +3,4 @@ sudo apt install software-properties-common
 sudo apt-add-repository --yes --update ppa:ansible/ansible
 sudo apt install -y ansible
 sudo ansible-galaxy collection install community.general
+pip install github3.py
